--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 server.port=8081
 
+feign.okhttp.enabled=true
+feign.autoconfiguration.jackson.enabled=true
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-feign.okhttp.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/zerouser?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
