feat: (Customer) 엔티티 클래스에 Setter 어노테이션 추가
- CustomerEntity

--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -5,10 +5,9 @@ feign.autoconfiguration.jackson.enabled=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.datasource.url=jdbc:mysql://localhost:3306/zerouser?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3307/zeroorder?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1
-spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
