--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.data:spring-data-envers'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'org.apache.commons:commons-lang3:3.1'
+    implementation project(path: ':zerobase-domain', configuration: 'default')
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
