docs: application 설정파일에 key 주석관련 추가

--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=1
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+# Mailgun KEY
+
+# JWT KEY
