--- a/user-api/src/test/resources/application.properties
+++ b/user-api/src/test/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.username=sa
 spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+# Mailgun KEY
