--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.shutdown=graceful
 server.port=8081
 
 feign.okhttp.enabled=true
@@ -5,10 +6,11 @@ feign.autoconfiguration.jackson.enabled=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.datasource.url=jdbc:mysql://localhost:3307/zeroorder?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3307/user?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
