build: test 관련 라이브러리 추가 설치

--- a/order-api/build.gradle
+++ b/order-api/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jpa'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'com.h2database:h2'
     testImplementation('it.ozimov:embedded-redis:0.7.3') {
