--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.shutdown=graceful
 server.port=8082
 
+feign.client.url.user-api=localhost:8081
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.datasource.url=jdbc:mysql://localhost:3307/order?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
@@ -9,7 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=1
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.redis.host=localhost
 spring.redis.port=6379
